# Alise-Minimal

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: split_croprot.yaml  train_fs.yaml
config/callbacks/: minimal_downstream.yaml
config/datamodule/: croprot.yaml
config/loggers/: default.yaml
config/module/: alise_fs_seg.yaml
config/train/: downstream_fs.yaml
script/: split_croprot.py  train_fs.py
src/alise_minimal/constant/: dataset.py
src/alise_minimal/data/: batch_class.py
src/alise_minimal/data/datamodule/: collate_fn.py  croprot_datamodule.py  template_datamodule.py  transform.py  transform_class.py  utils.py
src/alise_minimal/data/dataset/: croprot.py  sample_class.py  utils.py
src/alise_minimal/lightning_module/: fully_supervised_segmentation.py  hydra_dataclass.py  template_module.py
src/alise_minimal/torch_model/: alise.py  attention_mechanism.py  decoder.py  patch_embedding.py  sse.py  temporal_positional_encoder.py
tests/: test_alise.py  test_attention_mechanism.py  test_croprot.py  test_croprot_datamodule.py  test_fully_supervised_segmentation.py  test_patch_embedding.py  test_sse.py  test_temporal_positional_encoder.py  test_utils.py
