[project]
authors = [{name = "iris.dumeur6@etu.univ-lorraine.fr", email = "iris.dumeur6@etu.univ-lorraine.fr"}]
dependencies = []
description = "Add a short description here"
name = "alise_minimal"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
alise_minimal = { path = ".", editable = true }

[tool.pixi.tasks]
