[project]
authors = [{name = "iris.dumeur6@etu.univ-lorraine.fr", email = "iris.dumeur6@etu.univ-lorraine.fr"}]
dependencies = []
description = "Add a short description here"
name = "alise_minimal"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
alise_minimal = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = ["https://download.pytorch.org/whl/cpu"]

[tool.pixi.dependencies]
lightning = ">=2.4.0,<3"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
pre-commit = ">=4.0.1,<5"
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"
mypy = ">=1.13.0,<2"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pytest.ini_options]
addopts = "--cov=alise_minimal"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
