[project]
authors = [{name = "iris.dumeur6@etu.univ-lorraine.fr", email = "iris.dumeur6@etu.univ-lorraine.fr"}]
dependencies = []
description = "Add a short description here"
name = "alise_minimal"
requires-python = ">= 3.10"
version = "0.1.0"

[project.optional-dependencies]
dev = ["perflint>=0.8.1,<0.9", "isort", "black>=24.10.0,<25", "pyupgrade>=3.19.0,<4", "flake8"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge","pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
alise_minimal = { path = ".", editable = true }

[tool.pixi.tasks]



[tool.pixi.dependencies]
lightning = ">=2.4.0,<3"
pytorch = ">=2.5.1,<3"
torchmetrics = ">=1.5.2,<2"
einops = ">=0.8.0,<0.9"
hydra-core = ">=1.3.2,<2"
torchvision = ">=0.20.1,<0.21"
pandas = ">=2.2.3,<3"
ipykernel = ">=6.29.5,<7"
tensorboard = ">=2.18.0,<3"




[tool.pixi.feature.dev.dependencies]
ruff = "*"
pre-commit = ">=4.0.1,<5"
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"
mypy = ">=1.13.0,<2"
sphinx = ">=8.1.3,<9"
hypothesis = ">=6.122.3,<7"
pylint = ">=3.3.2,<4"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pytest.ini_options]
addopts = "--cov=alise_minimal"
testpaths = ["tests"]
markers = ["trex"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
